[gd_scene load_steps=8 format=2]

[ext_resource path="res://WORLD/World.gd" type="Script" id=1]
[ext_resource path="res://Enemy/Enemy.tscn" type="PackedScene" id=2]
[ext_resource path="res://Miner/Miner.tscn" type="PackedScene" id=3]
[ext_resource path="res://WORLD/BAR.png" type="Texture" id=4]
[ext_resource path="res://WORLD/GROUND.tres" type="TileSet" id=5]
[ext_resource path="res://WORLD/BACKGROUND.png" type="Texture" id=6]
[ext_resource path="res://WORLD/HELP.png" type="Texture" id=7]

[node name="World" type="Node2D"]
script = ExtResource( 1 )

[node name="Enemy" parent="." instance=ExtResource( 2 )]
position = Vector2( 416, 160 )

[node name="Miner" parent="." instance=ExtResource( 3 )]
position = Vector2( 64, 176 )

[node name="spawntimer" type="Timer" parent="."]
wait_time = 1.3

[node name="level1timer" type="Timer" parent="."]
wait_time = 30.0
one_shot = true

[node name="Shop" type="Control" parent="."]
visible = false
margin_left = 164.0
margin_top = 26.0
margin_right = 210.0
margin_bottom = 64.0

[node name="VBoxContainer" type="VBoxContainer" parent="Shop"]
margin_left = 39.213
margin_top = 66.0
margin_right = 131.213
margin_bottom = 223.0

[node name="ARMOR" type="Button" parent="Shop/VBoxContainer"]
margin_right = 186.0
margin_bottom = 20.0
text = "BUY ARMOR(300L)"

[node name="BEARD" type="Button" parent="Shop/VBoxContainer"]
margin_top = 24.0
margin_right = 186.0
margin_bottom = 44.0
text = "BUY BEARD(1000L)"

[node name="PICKAXE" type="Button" parent="Shop/VBoxContainer"]
margin_top = 48.0
margin_right = 186.0
margin_bottom = 68.0
text = "UPGRADE PICKAXE(2000L)"

[node name="ARMOR2" type="Button" parent="Shop/VBoxContainer"]
visible = false
margin_top = 72.0
margin_right = 186.0
margin_bottom = 92.0
text = "BUY ARMOR2(700L)"

[node name="TextureProgress" type="TextureProgress" parent="."]
margin_right = 640.0
margin_bottom = 40.0
max_value = 3000.0
texture_progress = ExtResource( 4 )

[node name="Label" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 26.0

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 5 )
format = 1
tile_data = PoolIntArray( 65535, 0, 0, 10, 0, 0, 131071, 0, 0, 65546, 0, 0, 196607, 0, 0, 131082, 0, 0, 262143, 0, 0, 196618, 0, 0, 327679, 0, 0, 262144, 1, 0, 262145, 0, 0, 262146, 1, 0, 262147, 0, 0, 262148, 0, 0, 262149, 1, 0, 262150, 0, 0, 262151, 1, 0, 262152, 0, 0, 262153, 1, 0, 262154, 0, 0 )

[node name="level2timer" type="Timer" parent="."]
wait_time = 45.0
one_shot = true

[node name="level3timer" type="Timer" parent="."]
wait_time = 60.0
one_shot = true

[node name="shoptimer2" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="Label2" type="Label" parent="."]
margin_top = 46.0
margin_right = 132.0
margin_bottom = 176.0
text = "
"

[node name="shoptimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 320, 160 )
z_index = -2
texture = ExtResource( 6 )

[node name="start" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="HELP" type="Sprite" parent="."]
position = Vector2( 256, 112 )
scale = Vector2( 0.204338, 0.204338 )
z_index = -1
texture = ExtResource( 7 )

[connection signal="alive" from="Miner" to="." method="_on_Miner_alive"]
[connection signal="timeout" from="spawntimer" to="." method="_on_spawntimer_timeout"]
[connection signal="timeout" from="spawntimer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="level1timer" to="." method="_on_level1timer_timeout"]
[connection signal="timeout" from="level1timer" to="." method="_on_Timer2_timeout"]
[connection signal="pressed" from="Shop/VBoxContainer/ARMOR" to="." method="_on_ARMOR_pressed"]
[connection signal="pressed" from="Shop/VBoxContainer/BEARD" to="." method="_on_BEARD_pressed"]
[connection signal="pressed" from="Shop/VBoxContainer/PICKAXE" to="." method="_on_PICKAXE_pressed"]
[connection signal="pressed" from="Shop/VBoxContainer/ARMOR2" to="." method="_on_ARMOR2_pressed"]
[connection signal="timeout" from="level2timer" to="." method="_on_level2timer_timeout"]
[connection signal="timeout" from="level3timer" to="." method="_on_level3timer_timeout"]
[connection signal="timeout" from="shoptimer2" to="." method="_on_shoptimer2_timeout"]
[connection signal="timeout" from="shoptimer" to="." method="_on_shoptimer_timeout"]
[connection signal="timeout" from="start" to="." method="_on_start_timeout"]
